Something is fixed.

--- a/classData/json_file_format.ipynb
+++ b/classData/json_file_format.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### json.dump() 함수로 파이썬 사전 데이터를 파일로 쓰기"
+    "#### json.dump() 함수로 파이썬 사전 데이터를 JSON 파일로 쓰기"
    ]
   },
   {
