--- a/classData/pandas_basic.ipynb
+++ b/classData/pandas_basic.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
@@ -116,7 +116,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "metadata": {
     "scrolled": true
    },
@@ -153,7 +153,7 @@
        "Index(['국어', '영어', '수학'], dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "array([70, 60, 90])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,31 +335,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    dave\n",
+       "0    yong\n",
        "1    alex\n",
        "2    amir\n",
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "seriesdata = pd.Series(['dave', 'alex', 'amir'])\n",
+    "seriesdata = pd.Series(['yong', 'alex', 'amir'])\n",
     "seriesdata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,30 +390,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0    1.0\n",
-       "1    1.0\n",
-       "2    1.0\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1.0\n",
+      "1    1.0\n",
+      "2    0.0\n",
+      "dtype: float64\n"
+     ]
     }
    ],
    "source": [
-    "seriesdata.astype('float')"
+    "print(seriesdata.astype('float'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +422,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +446,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +469,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +898,7 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
