--- a/classData/pandas_data_processing.ipynb
+++ b/classData/pandas_data_processing.ipynb
@@ -1067,17 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc = pd.read_csv(PATH + \"01-22-2020.csv\", encoding='utf-8-sig')\n",
-    "nan_data = {'Deaths': 0, 'Recovered'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1175,14 +1165,14 @@
        "4        0.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "doc = pd.read_csv(PATH + \"01-22-2020.csv\", encoding='utf-8-sig')\n",
-    "nan_data = {'Deaths': 0, 'Recovered':0}\n",
+    "nan_data = {'Deaths': 0, 'Recovered': 0}\n",
     "doc = doc.fillna(nan_data)\n",
     "doc.head()"
    ]
@@ -1198,9 +1188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 92,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1341,7 +1331,7 @@
        "4                Adair, Iowa, US  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,10 +1343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 93,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1471,7 +1459,7 @@
        "Angola               5  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1490,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1487,7 @@
        "Index(['FIPS', 'Lat', 'Long_', 'Confirmed', 'Deaths', 'Recovered', 'Active'], dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1525,7 +1513,7 @@
        "      dtype='object', name='Country_Region', length=180)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1543,8 +1531,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 96,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1590,8 +1580,8 @@
        "    <tr>\n",
        "      <th>US</th>\n",
        "      <td>65168934.0</td>\n",
-       "      <td>83042.72113</td>\n",
-       "      <td>-197696.886157</td>\n",
+       "      <td>82956.96013</td>\n",
+       "      <td>-197553.963757</td>\n",
        "      <td>213372</td>\n",
        "      <td>4757</td>\n",
        "      <td>8474</td>\n",
@@ -1604,14 +1594,14 @@
       "text/plain": [
        "                      FIPS          Lat          Long_  Confirmed  Deaths  \\\n",
        "Country_Region                                                              \n",
-       "US              65168934.0  83042.72113 -197696.886157     213372    4757   \n",
+       "US              65168934.0  82956.96013 -197553.963757     213372    4757   \n",
        "\n",
        "                Recovered  Active  \n",
        "Country_Region                     \n",
        "US                   8474       0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,7 +1624,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "PATH = \"COVID-19-master/csse_covid_19_data/csse_covid_19_daily_reports/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1660,6 +1660,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Confirmed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mainland China</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Country/Region  Confirmed\n",
+       "0  Mainland China        1.0\n",
+       "1  Mainland China       14.0\n",
+       "2  Mainland China        6.0\n",
+       "3  Mainland China        1.0\n",
+       "4  Mainland China        NaN"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1669,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1698,8 +1776,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 103,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1765,7 +1845,7 @@
        "5  Mainland China         26"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1784,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1794,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1883,7 @@
        "Index(['Country/Region', 'Confirmed'], dtype='object')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1814,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1823,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1832,7 +1912,7 @@
        "Index(['Country_Region', 'Confirmed'], dtype='object')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1851,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1957,7 +2037,7 @@
        "[3560 rows x 2 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1970,8 +2050,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 116,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1990,7 +2072,7 @@
        "Length: 3560, dtype: bool"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2008,8 +2090,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 117,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2114,7 +2198,7 @@
        "[3353 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2127,7 +2211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- drop_ducplicates() : 중복 행 삭제중복값\n",
+    "- drop_duplicates() : 중복 행 삭제중복값\n",
     "  - 특정 컬럼을 기준으로 중복 행 제거하기\n",
     "    - subset=특정컬럼\n",
     "  - 중복된 경우, 처음과 마지막 행 중 어느 행을 남길 것인지 결정하기 \n",
@@ -2137,7 +2221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2243,7 +2327,7 @@
        "[180 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2252,6 +2336,13 @@
     "doc = doc.drop_duplicates(subset='Country_Region', keep='last')\n",
     "doc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
