--- a/classData/pandas_merge_concat.ipynb
+++ b/classData/pandas_merge_concat.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
-       "      <td>Dave</td>\n",
+       "      <td>Yong</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -93,10 +93,10 @@
        "   id  customer_id customer_name\n",
        "0   1            1        Robert\n",
        "1   2            2         Peter\n",
-       "2   3            3          Dave"
+       "2   3            3          Yong"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,14 +105,14 @@
     "df1 = pd.DataFrame({\n",
     "    'id': [1, 2, 3],\n",
     "    'customer_id': [1, 2, 3],\n",
-    "    'customer_name': ['Robert', 'Peter', 'Dave']\n",
+    "    'customer_name': ['Robert', 'Peter', 'Yong']\n",
     "}, columns=['id', 'customer_id', 'customer_name'])\n",
     "df1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "2   4       300  2020-10-01"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>Dave</td>\n",
+       "      <td>Yong</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -284,13 +284,13 @@
        "   id  customer_id customer_name  order_id  order_date\n",
        "0   1          1.0        Robert       NaN         NaN\n",
        "1   2          2.0         Peter       NaN         NaN\n",
-       "2   3          3.0          Dave       NaN         NaN\n",
+       "2   3          3.0          Yong       NaN         NaN\n",
        "0   1          NaN           NaN     100.0  2021-01-21\n",
        "1   2          NaN           NaN     200.0  2021-02-03\n",
        "2   4          NaN           NaN     300.0  2020-10-01"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
-       "      <td>Dave</td>\n",
+       "      <td>Yong</td>\n",
        "      <td>4</td>\n",
        "      <td>300</td>\n",
        "      <td>2020-10-01</td>\n",
@@ -376,10 +376,10 @@
        "   id  customer_id customer_name  id  order_id  order_date\n",
        "0   1            1        Robert   1       100  2021-01-21\n",
        "1   2            2         Peter   2       200  2021-02-03\n",
-       "2   3            3          Dave   4       300  2020-10-01"
+       "2   3            3          Yong   4       300  2020-10-01"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "1   2            2         Peter       200  2021-02-03"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -550,7 +550,7 @@
        "1   2            2         Peter       200  2021-02-03"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
     "df1 = pd.DataFrame({\n",
     "    'id': [1, 2, 3],\n",
     "    'customer_id': [1, 2, 3],\n",
-    "    'customer_name': ['Robert', 'Peter', 'Dave']\n",
+    "    'customer_name': ['Robert', 'Peter', 'Yong']\n",
     "}, columns=['id', 'customer_id', 'customer_name'])\n",
     "df2 = pd.DataFrame({\n",
     "    'id': [1, 2, 4],\n",
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "1   2            2         Peter       200  2021-02-03"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -750,7 +750,7 @@
        "1   2            2         Peter       200  2021-02-03"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +785,7 @@
     "df1 = pd.DataFrame({\n",
     "    'id': [1, 2, 3],\n",
     "    'customer_id': [1, 2, 3],\n",
-    "    'customer_name': ['Robert', 'Peter', 'Dave']\n",
+    "    'customer_name': ['Robert', 'Peter', 'Yong']\n",
     "}, columns=['id', 'customer_id', 'customer_name'])\n",
     "df2 = pd.DataFrame({\n",
     "    'id': [1, 2, 4],\n",
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>Dave</td>\n",
+       "      <td>Yong</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -868,11 +868,11 @@
        "   id  customer_id customer_name  order_id  order_date\n",
        "0   1          1.0        Robert     100.0  2021-01-21\n",
        "1   2          2.0         Peter     200.0  2021-02-03\n",
-       "2   3          3.0          Dave       NaN         NaN\n",
+       "2   3          3.0          Yong       NaN         NaN\n",
        "3   4          NaN           NaN     300.0  2020-10-01"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +905,7 @@
     "df1 = pd.DataFrame({\n",
     "    'id': [1, 2, 3],\n",
     "    'customer_id': [1, 2, 3],\n",
-    "    'customer_name': ['Robert', 'Peter', 'Dave']\n",
+    "    'customer_name': ['Robert', 'Peter', 'Yong']\n",
     "}, columns=['id', 'customer_id', 'customer_name'])\n",
     "df2 = pd.DataFrame({\n",
     "    'id': [1, 2, 4],\n",
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
-       "      <td>Dave</td>\n",
+       "      <td>Yong</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -980,10 +980,10 @@
        "   id  customer_id customer_name  order_id  order_date\n",
        "0   1            1        Robert     100.0  2021-01-21\n",
        "1   2            2         Peter     200.0  2021-02-03\n",
-       "2   3            3          Dave       NaN         NaN"
+       "2   3            3          Yong       NaN         NaN"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,7 +1016,7 @@
     "df1 = pd.DataFrame({\n",
     "    'id': [1, 2, 3],\n",
     "    'customer_id': [1, 2, 3],\n",
-    "    'customer_name': ['Robert', 'Peter', 'Dave']\n",
+    "    'customer_name': ['Robert', 'Peter', 'Yong']\n",
     "}, columns=['id', 'customer_id', 'customer_name'])\n",
     "df2 = pd.DataFrame({\n",
     "    'id': [1, 2, 4],\n",
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
        "2   4          NaN           NaN       300  2020-10-01"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,7 @@
     "df1 = pd.DataFrame({\n",
     "    'id': [1, 2, 3],\n",
     "    'customer_id': [1, 2, 3],\n",
-    "    'customer_name': ['Robert', 'Peter', 'Dave']\n",
+    "    'customer_name': ['Robert', 'Peter', 'Yong']\n",
     "}, columns=['id', 'customer_id', 'customer_name'])\n",
     "df2 = pd.DataFrame({\n",
     "    'id': [1, 2, 4],\n",
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Dave</td>\n",
+       "      <td>Yong</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1202,10 +1202,10 @@
        "id                           \n",
        "1             1        Robert\n",
        "2             2         Peter\n",
-       "3             3          Dave"
+       "3             3          Yong"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
        "4        300  2020-10-01"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1310,7 @@
     "df1 = pd.DataFrame({\n",
     "    'id': [1, 2, 3],\n",
     "    'customer_id': [1, 2, 3],\n",
-    "    'customer_name': ['Robert', 'Peter', 'Dave']\n",
+    "    'customer_name': ['Robert', 'Peter', 'Yong']\n",
     "}, columns=['id', 'customer_id', 'customer_name'])\n",
     "df2 = pd.DataFrame({\n",
     "    'id': [1, 2, 4],\n",
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1345,46 +1345,54 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id_x</th>\n",
        "      <th>customer_id</th>\n",
        "      <th>customer_name</th>\n",
+       "      <th>id_y</th>\n",
        "      <th>order_id</th>\n",
        "      <th>order_date</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>Robert</td>\n",
+       "      <td>1</td>\n",
        "      <td>100</td>\n",
        "      <td>2021-01-21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>Peter</td>\n",
+       "      <td>2</td>\n",
        "      <td>200</td>\n",
        "      <td>2021-02-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Yong</td>\n",
+       "      <td>4</td>\n",
+       "      <td>300</td>\n",
+       "      <td>2020-10-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    customer_id customer_name  order_id  order_date\n",
-       "id                                                 \n",
-       "1             1        Robert       100  2021-01-21\n",
-       "2             2         Peter       200  2021-02-03"
+       "   id_x  customer_id customer_name  id_y  order_id  order_date\n",
+       "0     1            1        Robert     1       100  2021-01-21\n",
+       "1     2            2         Peter     2       200  2021-02-03\n",
+       "2     3            3          Yong     4       300  2020-10-01"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1406,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1423,7 @@
     "df1 = pd.DataFrame({\n",
     "    'id': [1, 2, 3],\n",
     "    'customer_id': [1, 2, 3],\n",
-    "    'customer_name': ['Robert', 'Peter', 'Dave']\n",
+    "    'customer_name': ['Robert', 'Peter', 'Yong']\n",
     "}, columns=['id', 'customer_id', 'customer_name'])\n",
     "df2 = pd.DataFrame({\n",
     "    'id': [1, 2, 4],\n",
@@ -1426,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1450,46 +1458,40 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id_x</th>\n",
        "      <th>customer_id</th>\n",
        "      <th>customer_name</th>\n",
+       "      <th>id_y</th>\n",
        "      <th>order_id</th>\n",
        "      <th>order_date</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>Robert</td>\n",
-       "      <td>100.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
        "      <td>2021-01-21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>Peter</td>\n",
-       "      <td>200.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>200</td>\n",
        "      <td>2021-02-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Dave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>300.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Yong</td>\n",
+       "      <td>4</td>\n",
+       "      <td>300</td>\n",
        "      <td>2020-10-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1497,15 +1499,13 @@
        "</div>"
       ],
       "text/plain": [
-       "    customer_id customer_name  order_id  order_date\n",
-       "id                                                 \n",
-       "1           1.0        Robert     100.0  2021-01-21\n",
-       "2           2.0         Peter     200.0  2021-02-03\n",
-       "3           3.0          Dave       NaN         NaN\n",
-       "4           NaN           NaN     300.0  2020-10-01"
+       "   id_x  customer_id customer_name  id_y  order_id  order_date\n",
+       "0     1            1        Robert     1       100  2021-01-21\n",
+       "1     2            2         Peter     2       200  2021-02-03\n",
+       "2     3            3          Yong     4       300  2020-10-01"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1513,6 +1513,20 @@
    "source": [
     "pd.merge(df1, df2, how='outer', left_index=True, right_index=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
